--- a/YerelEkonomiDesteklemeAPI/appsettings.json
+++ b/YerelEkonomiDesteklemeAPI/appsettings.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\LocalDB;Database=LocalEconomyDB;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
