business classlar hazır

--- a/YerelBusiness/LocalEconomyApi.Business.csproj
+++ b/YerelBusiness/LocalEconomyApi.Business.csproj
@@ -16,7 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\YerelEkonomiDesteklemeAPI\LocalEconomyAPI.csproj" />
+    <ProjectReference Include="..\YerelEkonomiDestekleme.DataAcces\LocalEconomyApi.DataAcces.csproj" />
+    <ProjectReference Include="..\YerelEkonomiDestekleme.Entities\LocalEconomyApi.Entities.csproj" />
   </ItemGroup>
 
 </Project>
